# spokenagents

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  FEEDBACK.md  KEEPERHUB_BUILDER_FEEDBACK_BOUNTY.md  OPENAGENTS_REQUIREMENTS.mdx  README.md  prizes.md  project-idea.mdx  pyproject.toml
.claude/: settings.json
data/: agents.json
docs/: architecture-flowchart.mmd  architecture-sequence.mmd
docs/plans/: 2026-04-27-tollgate-implementation.md
scripts/: axl_smoke_test.py  bella_responder.py  gen_brand_assets.py  keeperhub_probe.py  keeperhub_smoke_test.py  register_ens.py  replay_trace.py  setup_ens_subdomains.py
src/: server.py
src/agents/: beat_injector.py  callee.py  caller.py  negotiation.py
src/audio/: beat_encoder.py  events.py
src/ens/: agent_registry.py  registrar.py  registry.py  resolver.py
src/payments/: keeperhub.py  receipt.py
src/protocol/: messages.py  session.py  toll_gate.py
tests/: test_beat_encoder.py  test_ens.py  test_keeperhub.py  test_negotiation.py  test_protocol.py  test_session.py  test_toll_gate.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/pixel-agents-assets/: ATTRIBUTION.txt
ui/src/: App.tsx  CallFrame.tsx  PixelOffice.tsx  TracePanel.tsx  audio.ts  main.tsx  officeLayout.ts
ui/src/components/: TollgateLogo.tsx
ui/src/pages/: CreateAgent.tsx  Landing.tsx  Pitch.tsx
ui/src/styles/: globals.css
