[project]
name = "tollgate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai]>=0.8",
    "web3>=6.0",
    "eth-ens-namehash>=2.0",
    "httpx>=0.27",
    "websockets>=12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
