[project]
name = "tollgate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,google,deepgram,silero]==0.0.85",
    "livekit-agents[openai,silero]>=0.8",
    "aiohttp>=3.9",
    "web3>=6.0",
    "httpx>=0.27",
    "websockets>=12",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
